cluster/k8s/props/registry-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: props-registry
  namespace: props
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/component: registry
      app.kubernetes.io/instance: props
      app.kubernetes.io/name: props
  template:
    metadata:
      labels:
        app.kubernetes.io/component: registry
        app.kubernetes.io/instance: props
        app.kubernetes.io/name: props
    spec:
      nodeSelector:
        topology.kubernetes.io/region: proxmox
      containers:
        - name: registry
          image: registry:2
          ports:
            - containerPort: 5000
          volumeMounts:
            - name: registry-storage
              mountPath: /var/lib/registry
      volumes:
        - name: registry-storage
          persistentVolumeClaim:
            claimName: props-registry
