cluster/k8s/props/registry-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: props-registry
  namespace: props
spec:
  type: ClusterIP
  ports:
    - port: 5000
      targetPort: 5000
  selector:
    app.kubernetes.io/component: registry
    app.kubernetes.io/instance: props
    app.kubernetes.io/name: props
