cluster/k8s/props/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: props
  namespace: props
spec:
  type: ClusterIP
  ports:
    - port: 8000
      targetPort: 8000
  selector:
    app.kubernetes.io/instance: props
    app.kubernetes.io/name: props
