cluster/k8s/props/httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: props
  namespace: props
spec:
  parentRefs:
    - name: cluster-gateway
      namespace: gateway-system
  hostnames:
    - "props.allegedly.works"
  rules:
    - backendRefs:
        - name: props
          port: 80
